2008-08-11  Dan Williams  <dcbw@redhat.com>

	Update to match NM svn3924 vpn setting changes (consolidated vpn and
	vpn-properties settings; vpn-specific data now a hash of string:string
	instead of string:variant); convert old GConf entries to new format

2008-08-07  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/ce-page-wired.glade
	  src/connection-editor/ce-page-wireless.glade
		- Replace "Example:" labels with tooltips

2008-08-06  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/page-ip4.c
		- 'shared' is pointless for VPN connections

2008-08-06  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/ce-page-ip4.glade
		- Add a checkbox for 'ignore-auto-routes'

	* src/connection-editor/ip4-routes-dialog.c
	  src/connection-editor/ip4-routes-dialog.h
	  src/connection-editor/page-ip4.c
		- Handle route editing

2008-08-06  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
	  src/gconf-helpers/gconf-helpers.h
		- Generalize IP4 helper functions to handle both routes and addresses

	* src/gconf-helpers/gconf-upgrade.c
	  src/gconf-helpers/gconf-upgrade.h
		- (nm_gconf_migrate_0_7_ignore_dhcp_dns, nm_gconf_migrate_0_7_vpn_routes):
			new functions

2008-08-05  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/Makefile.am
	  src/connection-editor/ip4-routes-dialog.c
	  src/connection-editor/ip4-routes-dialog.h
	  src/connection-editor/ce-page-ip4.glade
		- Add a mostly-functional routes editor dialog

	* src/connection-editor/page-ip4.c
		- Hook the routes button up to the routes dialog

2008-08-04  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/page-ip4.c
	  src/connection-editor/ce-page-ip4.glade
		- De-sensitize all widgets that don't make sense for a given IP4 method
		- Add a 'routes' button
		- Make the examples tooltips rather than widgets

2008-08-01  Dan Williams  <dcbw@redhat.com>

	* src/utils/utils.c
		- (fixup_desc_string): remove more bits of vendor and product strings
